--- a/frontend/course-manager/src/app/nav-bar/nav-bar.component.html
+++ b/frontend/course-manager/src/app/nav-bar/nav-bar.component.html
@@ -1,1 +1,21 @@
-<p>nav-bar works!</p>
+<mat-sidenav-container class="container">
+    <mat-sidenav class="sidenav" mode="side" opened fixedInViewport="true" fixedTopGap="64">
+        <mat-nav-list class="nav-manu">
+            <a mat-list-item routerLink = "/">
+                <mat-icon class="icons">
+                    home
+                </mat-icon>
+                Início
+            </a>
+            <a mat-list-item routerLink = "/courses">
+                <mat-icon class="icons">
+                    storage
+                </mat-icon>
+                Cursos
+            </a>
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content class="content">
+        <router-outlet></router-outlet>
+    </mat-sidenav-content>
+</mat-sidenav-container>
