--- a/frontend/course-manager/src/app/header/header.component.html
+++ b/frontend/course-manager/src/app/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<mat-toolbar class="header mat-elevation-z4">
+    <span>
+        <a routerLink = "/">
+            <h1>Course Manager</h1>
+        </a>
+    </span>
+</mat-toolbar>
