--- a/frontend/course-manager/src/app/header/header.component.css
+++ b/frontend/course-manager/src/app/header/header.component.css
@@ -2,8 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #008be7;
-   
+    background-color: #004fe2;
 }
 
 .header a {
