--- a/frontend/course-manager/src/app/home/home.component.html
+++ b/frontend/course-manager/src/app/home/home.component.html
@@ -3,6 +3,6 @@
         Bem Vindo!
     </mat-card-title>
     <mat-card-subtitle class="subtitle">
-        Sistema para simular ouma plataforma de Cursos
+        Sistema para simular uma plataforma de Cursos
     </mat-card-subtitle>
 </mat-card>
