--- a/frontend/course-manager/src/app/course/components/course-list/course-list.component.css
+++ b/frontend/course-manager/src/app/course/components/course-list/course-list.component.css
@@ -1,7 +1,8 @@
-h2 {
-    
+.container-list {
+    display: flex;
+    align-items: center;
 }
 
-.filter-by {
-    width: 200px;
+.container-list h2 {
+    font-size: 1.8em;
 }
