--- a/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
+++ b/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
@@ -1,4 +1,37 @@
 <mat-card class="container-list">
     <h2>Lista de Cursos</h2>
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Filter By:</label>
+        <div class="col-sm-10">
+            <input [(ngModel)]="filter" class="form-control">
+        </div>
+    </div>
+    
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Image</th>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Code</th>
+                <th>Release Date</th>
+                <th>Rating</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let course of filteredCourses">
+                <td><img [src]="course.imageUrl" width="34px"></td>
+                <td>{{ course.name }}</td>
+                <td>{{ course.price }}</td>
+                <td>{{ course.code! | replace: '-': ' '}}</td>
+                <td>{{ course.releaseDate | date: 'dd/MM/yyyy' }}</td>
+                <td>
+                    <a [routerLink]="['/course', course.id]" class="btn btn-primary mr-2">Edit</a>
+                    <button (click)="deleteById(course.id)" class="btn btn-danger mr-2">Delete</button>
+                </td>
+            </tr>
+        </tbody>
+    
+    </table>
 </mat-card>
 
