--- a/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
+++ b/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
@@ -1,4 +1,47 @@
 <mat-card class="container-list">
     <h2>Lista de Cursos</h2>
 </mat-card>
+<div class="mat-elevation-z4">
+    <table mat-table [dataSource]="courses">
+      <!-- Id Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef >Id</th>
+        <td mat-cell *matCellDef="let row">{{row.id}}</td>
+      </ng-container>
+
+      <!-- Image Column -->
+      <ng-container matColumnDef="image">
+        <th mat-header-cell *matHeaderCellDef >Imagem</th>
+        <td mat-cell *matCellDef="let row"><img src="{{row.imageUrl}}"></td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef >Nome</th>
+        <td mat-cell *matCellDef="let row">{{row.name}}</td>
+      </ng-container>
+
+      <!-- Code Column -->
+      <ng-container matColumnDef="code">
+        <th mat-header-cell *matHeaderCellDef >Codigo</th>
+        <td mat-cell *matCellDef="let row">{{row.code}}</td>
+      </ng-container>
+  
+      <!-- Price Column -->
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef >Preço</th>
+        <td mat-cell *matCellDef="let row">{{row.price | currency: 'BRL'}}</td>
+      </ng-container>
+
+      <!-- Code Column -->
+      <ng-container matColumnDef="rating">
+        <th mat-header-cell *matHeaderCellDef >Nota</th>
+        <td mat-cell *matCellDef="let row">{{row.rating}}</td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  
+  </div>
 
