--- a/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
+++ b/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
@@ -33,10 +33,16 @@
         <td mat-cell *matCellDef="let row">{{row.price | currency: 'BRL'}}</td>
       </ng-container>
 
-      <!-- Code Column -->
+      <!-- Rating Column -->
       <ng-container matColumnDef="rating">
         <th mat-header-cell *matHeaderCellDef >Nota</th>
         <td mat-cell *matCellDef="let row">{{row.rating}}</td>
+      </ng-container>
+
+      <!-- Duraction Column -->
+      <ng-container matColumnDef="duration">
+        <th mat-header-cell *matHeaderCellDef >Duração</th>
+        <td mat-cell *matCellDef="let row">{{row.duration}}h</td>
       </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
