--- a/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
+++ b/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
@@ -44,6 +44,15 @@
         <th mat-header-cell *matHeaderCellDef >Duração</th>
         <td mat-cell *matCellDef="let row">{{row.duration}}h</td>
       </ng-container>
+
+      <!-- Actions Column -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef >Ações</th>
+        <td mat-cell *matCellDef="let row">
+          <a mat-icon-button href="#"><mat-icon>edit</mat-icon></a>
+          <a mat-icon-button color="warn" href="#"><mat-icon>delete</mat-icon></a>
+        </td>
+      </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
