--- a/frontend/course-manager/src/app/course/components/course-list/course-list.component.css
+++ b/frontend/course-manager/src/app/course/components/course-list/course-list.component.css
@@ -7,6 +7,20 @@
     font-size: 1.8em;
 }
 
+.pesquisa {
+    display: flex;
+    margin-top: 10px;
+    align-items: center;
+}
+
+.pesquisa h3 {
+    margin-right: 20px;
+}
+
+.pesquisa .nome {
+    margin-right: 20px;
+}
+
 table {
     width: 100%;
 }
