--- a/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
+++ b/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
@@ -1,17 +1,12 @@
 <mat-card class="container-list">
-    <h2>Lista de Cursos</h2>
+    <mat-card-title>Lista de Cursos</mat-card-title>
 </mat-card>
-<div class="pesquisa">
-  <h3>Pesquisar por:</h3>
-  <mat-form-field class="nome" appearance="outline">
-    <mat-label>Nome</mat-label>
-    <input matInput placeholder="Digite o nome...">
-  </mat-form-field>
-  <mat-form-field class="codigo" appearance="outline">
-    <mat-label>Código</mat-label>
-    <input matInput placeholder="Digite o código...">
-  </mat-form-field>
-</div>
+<mat-card class="filter">
+    <h3>Filtrar:</h3>
+    <mat-form-field>
+      <input matInput placeholder="Digite o nome...">
+    </mat-form-field>
+</mat-card>
 <div class="mat-elevation-z4">
     <table mat-table [dataSource]="courses">
       <!-- Id Column -->
