rota para informacoes

--- a/frontend/course-manager/src/app/course/components/course-info/course-info.component.html
+++ b/frontend/course-manager/src/app/course/components/course-info/course-info.component.html
@@ -1,1 +1,5 @@
-<p>course-info works!</p>
+<mat-card>
+    <mat-card-title>Informações do Curso</mat-card-title>
+    
+    <button mat-stroked-button routerLink="/courses">Voltar</button>
+</mat-card>
