--- a/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
+++ b/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
@@ -55,7 +55,7 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef >Ações</th>
         <td mat-cell *matCellDef="let row">
-          <a mat-icon-button color="primary" href="#"><mat-icon>add</mat-icon></a>
+          <a mat-icon-button color="primary" routerLink="/info/{{ row.id }}"><mat-icon>add</mat-icon></a>
           <a mat-icon-button color="warn" href="#"><mat-icon>delete</mat-icon></a>
         </td>
       </ng-container>
