--- a/frontend/course-manager/src/app/course/components/course-list/course-list.component.css
+++ b/frontend/course-manager/src/app/course/components/course-list/course-list.component.css
@@ -30,3 +30,10 @@ img {
 a {
     margin: 4px;
 }
+
+button {
+    margin: 10px 0px 10px 0px;
+    font-size: 16px;
+    background-color: #004fe2;
+    color: white;
+}
