--- a/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
+++ b/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
@@ -1,5 +1,8 @@
 <mat-card class="container-list">
     <mat-card-title>Lista de Cursos</mat-card-title>
+    <button mat-raised-button>
+      Cadastrar
+  </button>
 </mat-card>
 <div class="mat-elevation-z4">
     <table mat-table [dataSource]="courses">
@@ -43,8 +46,8 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef >Ações</th>
         <td mat-cell *matCellDef="let row">
-          <a mat-icon-button color="primary" routerLink="/info/{{ row.id }}"><mat-icon>add</mat-icon></a>
-          <a mat-icon-button color="warn" href="#"><mat-icon>delete</mat-icon></a>
+          <button mat-raised-button>Sobre</button>
+          <button mat-raised-button color="warn">Excluir</button>
         </td>
       </ng-container>
   
