--- a/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
+++ b/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
@@ -1,8 +1,24 @@
 <mat-card class="container-list">
     <mat-card-title>Lista de Cursos</mat-card-title>
-    <button mat-raised-button>
-      Cadastrar
-  </button>
+    <div class="form-top">
+        <!--button new register-->
+        <div>
+            <button id="btn-new-course" mat-raised-button>
+                Cadastrar
+            </button>
+        </div>
+        <!--search area-->
+        <div>
+            <mat-form-field class="form-search">
+                <mat-label>Pesquisar Sobre</mat-label>
+                <input matInput type="text">
+            </mat-form-field>
+            <button id="btn-search" mat-raised-button>
+                Pesquisar
+            </button>
+        </div>
+    </div>
+    
 </mat-card>
 <div class="mat-elevation-z4">
     <table mat-table [dataSource]="courses">
@@ -46,8 +62,8 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef >Ações</th>
         <td mat-cell *matCellDef="let row">
-          <button mat-raised-button>Sobre</button>
-          <button mat-raised-button color="warn">Excluir</button>
+          <button id="btn-info" mat-raised-button>Sobre</button>
+          <button id="btn-delete" mat-raised-button color="warn">Excluir</button>
         </td>
       </ng-container>
   
