--- a/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
+++ b/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
@@ -25,45 +25,45 @@
       <!-- Id Column -->
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef >Id</th>
-        <td mat-cell *matCellDef="let row">{{row.id}}</td>
+        <td mat-cell *matCellDef="let course">{{course.id}}</td>
       </ng-container>
   
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef >Nome</th>
-        <td mat-cell *matCellDef="let row">{{row.name}}</td>
+        <td mat-cell *matCellDef="let course">{{course.name}}</td>
       </ng-container>
 
       <!-- Code Column -->
       <ng-container matColumnDef="code">
         <th mat-header-cell *matHeaderCellDef >Codigo</th>
-        <td mat-cell *matCellDef="let row">{{row.code}}</td>
+        <td mat-cell *matCellDef="let course">{{course.code}}</td>
       </ng-container>
   
       <!-- Price Column -->
       <ng-container matColumnDef="price">
         <th mat-header-cell *matHeaderCellDef >Preço</th>
-        <td mat-cell *matCellDef="let row">{{row.price | currency: 'BRL'}}</td>
+        <td mat-cell *matCellDef="let course">{{course.price | currency: 'BRL'}}</td>
       </ng-container>
 
       <!-- Rating Column -->
       <ng-container matColumnDef="rating">
         <th mat-header-cell *matHeaderCellDef >Nota</th>
-        <td mat-cell *matCellDef="let row">{{row.rating}}</td>
+        <td mat-cell *matCellDef="let course">{{course.rating}}</td>
       </ng-container>
 
       <!-- Duraction Column -->
       <ng-container matColumnDef="duration">
         <th mat-header-cell *matHeaderCellDef >Duração</th>
-        <td mat-cell *matCellDef="let row">{{row.duration}}h</td>
+        <td mat-cell *matCellDef="let course">{{course.duration}}h</td>
       </ng-container>
 
       <!-- Actions Column -->
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef >Ações</th>
-        <td mat-cell *matCellDef="let row">
+        <td mat-cell *matCellDef="let course">
           <button id="btn-info" mat-raised-button>Sobre</button>
-          <button id="btn-delete" mat-raised-button color="warn">Excluir</button>
+          <button id="btn-delete" mat-raised-button color="warn" (click)="deleteById(course.id)">Excluir</button>
         </td>
       </ng-container>
   
