improving search field

--- a/frontend/course-manager/src/app/course/components/course-list/course-list.component.css
+++ b/frontend/course-manager/src/app/course/components/course-list/course-list.component.css
@@ -1,12 +1,4 @@
-.filter {
-    display: flex;
-    align-items: center;
-    margin: 4px auto 4px auto;
-}
 
-.filter h3 {
-    margin-right: 20px;
-}
 
 table {
     width: 100%;
@@ -31,32 +23,32 @@ a {
     margin: 4px;
 }
 
+.form-top {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
 #btn-new-course {
-    margin: 10px 0px 10px 0px;
     font-size: 16px;
     background-color: #004fe2;
     color: white;
 }
 
 #btn-info {
-    margin: 10px 10px 10px 0px;
     font-size: 16px;
     background-color: #004fe2;
     color: white;
 }
 
-.form-top {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
 .form-search {
-    font-size: 16px;
+    font-size: 14px;
+    color: white;
 }
 
 #btn-search {
-    margin: 10px 0px 10px 20px;
+    margin-left: 20px;
     font-size: 16px;
     background-color: #004fe2;
     color: white;
