--- a/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
+++ b/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
@@ -9,8 +9,8 @@
         </div>
         <!--search area-->
         <div>
-            <mat-form-field class="form-search">
-                <mat-label>Pesquisar Sobre</mat-label>
+            <mat-form-field class="form-search" appearance="outline">
+                <mat-label color="white">Pesquisar Sobre</mat-label>
                 <input matInput type="text">
             </mat-form-field>
             <button id="btn-search" mat-raised-button>
