--- a/frontend/course-manager/src/app/course/components/course-list/course-list.component.css
+++ b/frontend/course-manager/src/app/course/components/course-list/course-list.component.css
@@ -30,6 +30,11 @@ a {
     justify-content: space-between;
 }
 
+.search-options {
+    font-size: 16px;
+    margin: 0px 10px 0px 10px
+}
+
 #btn-new-course {
     font-size: 16px;
     background-color: #004fe2;
@@ -45,6 +50,7 @@ a {
 .form-search {
     font-size: 14px;
     color: white;
+    margin-left: 20px;
 }
 
 #btn-search {
