--- a/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
+++ b/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
@@ -1,74 +1,81 @@
 <mat-card class="container-list">
-    <mat-card-title>Lista de Cursos</mat-card-title>
-    <div class="form-top">
-        <!--button new register-->
-        <div>
-            <button id="btn-new-course" mat-raised-button>
-                Cadastrar
-            </button>
-        </div>
-        <!--search area-->
-        <div>
-            <mat-form-field class="form-search" appearance="outline">
-                <mat-label color="white">Pesquisar Sobre</mat-label>
-                <input matInput type="text">
-            </mat-form-field>
-            <button id="btn-search" mat-raised-button>
-                Pesquisar
-            </button>
-        </div>
+  <mat-card-title>Lista de Cursos</mat-card-title>
+  <div class="form-top">
+    <!--button new register-->
+    <div>
+      <button id="btn-new-course" mat-raised-button>
+        Cadastrar
+      </button>
     </div>
-    
-</mat-card>
-<div class="mat-elevation-z4">
-    <table mat-table [dataSource]="courses">
-      <!-- Id Column -->
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef >Id</th>
-        <td mat-cell *matCellDef="let course">{{course.id}}</td>
-      </ng-container>
+    <!--search area-->
+    <div>
+
+        <label class="search-options">Pesquisar por:</label>
+        <mat-radio-group [(ngModel)]="labelPosition">
+          <mat-radio-button class="search-options" value="id" color="primary">ID</mat-radio-button>
+          <mat-radio-button class="search-options" value="code" color="primary">Cógido</mat-radio-button>
+        </mat-radio-group>
   
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef >Nome</th>
-        <td mat-cell *matCellDef="let course">{{course.name}}</td>
-      </ng-container>
-
-      <!-- Code Column -->
-      <ng-container matColumnDef="code">
-        <th mat-header-cell *matHeaderCellDef >Codigo</th>
-        <td mat-cell *matCellDef="let course">{{course.code}}</td>
-      </ng-container>
-  
-      <!-- Price Column -->
-      <ng-container matColumnDef="price">
-        <th mat-header-cell *matHeaderCellDef >Preço</th>
-        <td mat-cell *matCellDef="let course">{{course.price | currency: 'BRL'}}</td>
-      </ng-container>
-
-      <!-- Rating Column -->
-      <ng-container matColumnDef="rating">
-        <th mat-header-cell *matHeaderCellDef >Nota</th>
-        <td mat-cell *matCellDef="let course">{{course.rating}}</td>
-      </ng-container>
-
-      <!-- Duraction Column -->
-      <ng-container matColumnDef="duration">
-        <th mat-header-cell *matHeaderCellDef >Duração</th>
-        <td mat-cell *matCellDef="let course">{{course.duration}}h</td>
-      </ng-container>
-
-      <!-- Actions Column -->
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef >Ações</th>
-        <td mat-cell *matCellDef="let course">
-          <button id="btn-info" mat-raised-button>Sobre</button>
-          <button id="btn-delete" mat-raised-button color="warn" (click)="deleteById(course.id)">Excluir</button>
-        </td>
-      </ng-container>
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+        <mat-form-field class="form-search" appearance="outline">
+          <mat-label color="white">Pesquisar Sobre</mat-label>
+          <input matInput type="text">
+        </mat-form-field>
+        <button id="btn-search" mat-raised-button>
+          Pesquisar
+        </button>
+      
+    </div>
   </div>
 
+</mat-card>
+<div class="mat-elevation-z4">
+  <table mat-table [dataSource]="courses">
+    <!-- Id Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>Id</th>
+      <td mat-cell *matCellDef="let course">{{course.id}}</td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Nome</th>
+      <td mat-cell *matCellDef="let course">{{course.name}}</td>
+    </ng-container>
+
+    <!-- Code Column -->
+    <ng-container matColumnDef="code">
+      <th mat-header-cell *matHeaderCellDef>Codigo</th>
+      <td mat-cell *matCellDef="let course">{{course.code}}</td>
+    </ng-container>
+
+    <!-- Price Column -->
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef>Preço</th>
+      <td mat-cell *matCellDef="let course">{{course.price | currency: 'BRL'}}</td>
+    </ng-container>
+
+    <!-- Rating Column -->
+    <ng-container matColumnDef="rating">
+      <th mat-header-cell *matHeaderCellDef>Nota</th>
+      <td mat-cell *matCellDef="let course">{{course.rating}}</td>
+    </ng-container>
+
+    <!-- Duraction Column -->
+    <ng-container matColumnDef="duration">
+      <th mat-header-cell *matHeaderCellDef>Duração</th>
+      <td mat-cell *matCellDef="let course">{{course.duration}}h</td>
+    </ng-container>
+
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Ações</th>
+      <td mat-cell *matCellDef="let course">
+        <button id="btn-info" mat-raised-button>Sobre</button>
+        <button id="btn-delete" mat-raised-button color="warn" (click)="deleteById(course.id)">Excluir</button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
