search adjusted by name or code

--- a/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
+++ b/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
@@ -12,7 +12,7 @@
 
         <label class="search-options">Pesquisar por:</label>
         <mat-radio-group [(ngModel)]="labelPosition">
-          <mat-radio-button class="search-options" value="id" color="primary">ID</mat-radio-button>
+          <mat-radio-button class="search-options" value="name" color="primary">Nome</mat-radio-button>
           <mat-radio-button class="search-options" value="code" color="primary">Cógido</mat-radio-button>
         </mat-radio-group>
   
