--- a/frontend/course-manager/src/app/course/components/course-list/course-list.component.css
+++ b/frontend/course-manager/src/app/course/components/course-list/course-list.component.css
@@ -42,6 +42,7 @@ a {
 }
 
 #btn-info {
+    margin-right: 10px;
     font-size: 16px;
     background-color: #004fe2;
     color: white;
@@ -49,7 +50,6 @@ a {
 
 .form-search {
     font-size: 14px;
-    color: white;
     margin-left: 20px;
 }
 
