route created for registration

--- a/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
+++ b/frontend/course-manager/src/app/course/components/course-list/course-list.component.html
@@ -1,27 +1,27 @@
 <mat-card class="container-list">
-  <mat-card-title>Lista de Cursos</mat-card-title>
+  <mat-card-title>List of Courses</mat-card-title>
   <div class="form-top">
     <!--button new register-->
     <div>
-      <button id="btn-new-course" mat-raised-button>
-        Cadastrar
+      <button id="btn-new-course" mat-raised-button routerLink="/registration">
+        New Register
       </button>
     </div>
     <!--search area-->
     <div>
 
-        <label class="search-options">Pesquisar por:</label>
+        <label class="search-options">Search for:</label>
         <mat-radio-group [(ngModel)]="labelPosition">
-          <mat-radio-button class="search-options" value="name" color="primary">Nome</mat-radio-button>
-          <mat-radio-button class="search-options" value="code" color="primary">Cógido</mat-radio-button>
+          <mat-radio-button class="search-options" value="name" color="primary">Name</mat-radio-button>
+          <mat-radio-button class="search-options" value="code" color="primary">Code</mat-radio-button>
         </mat-radio-group>
   
         <mat-form-field class="form-search" appearance="outline">
-          <mat-label color="white">Pesquisar Sobre</mat-label>
+          <mat-label color="white">Search about</mat-label>
           <input matInput type="text" [(ngModel)]="courseSearch">
         </mat-form-field>
         <button id="btn-search" mat-raised-button (click)="retrieveCourseByChoice()">
-          Pesquisar
+          Search
         </button>
       
     </div>
@@ -38,25 +38,25 @@
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Nome</th>
+      <th mat-header-cell *matHeaderCellDef>Name</th>
       <td mat-cell *matCellDef="let course">{{course.name}}</td>
     </ng-container>
 
     <!-- Code Column -->
     <ng-container matColumnDef="code">
-      <th mat-header-cell *matHeaderCellDef>Codigo</th>
+      <th mat-header-cell *matHeaderCellDef>Code</th>
       <td mat-cell *matCellDef="let course">{{course.code}}</td>
     </ng-container>
 
     <!-- Price Column -->
     <ng-container matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef>Preço</th>
-      <td mat-cell *matCellDef="let course">{{course.price | currency: 'BRL'}}</td>
+      <th mat-header-cell *matHeaderCellDef>Price</th>
+      <td mat-cell *matCellDef="let course">{{course.price | currency: 'US'}}</td>
     </ng-container>
 
     <!-- Rating Column -->
     <ng-container matColumnDef="rating">
-      <th mat-header-cell *matHeaderCellDef>Nota</th>
+      <th mat-header-cell *matHeaderCellDef>Rating</th>
       <td mat-cell *matCellDef="let course">{{course.rating}}</td>
     </ng-container>
 
@@ -68,10 +68,10 @@
 
     <!-- Actions Column -->
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef>Ações</th>
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let course">
-        <button id="btn-info" mat-raised-button>Sobre</button>
-        <button id="btn-delete" mat-raised-button color="warn" (click)="deleteById(course.id)">Excluir</button>
+        <button id="btn-info" mat-raised-button>About</button>
+        <button id="btn-delete" mat-raised-button color="warn" (click)="deleteById(course.id)">Delete</button>
       </td>
     </ng-container>
 
