--- a/frontend/course-manager/src/app/nav-bar/nav-bar.component.html
+++ b/frontend/course-manager/src/app/nav-bar/nav-bar.component.html
@@ -5,13 +5,13 @@
                 <mat-icon class="icons">
                     home
                 </mat-icon>
-                Início
+                Home
             </a>
             <a mat-list-item routerLink = "/courses">
                 <mat-icon class="icons">
                     storage
                 </mat-icon>
-                Cursos
+                Courses
             </a>
         </mat-nav-list>
     </mat-sidenav>
