--- a/frontend/course-manager/src/app/home/home.component.html
+++ b/frontend/course-manager/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <mat-card class="home mat-elevation-z4">
     <mat-card-title class="title">
-        Bem Vindo!
+        Welcome!
     </mat-card-title>
     <mat-card-subtitle class="subtitle">
-        Sistema para simular uma plataforma de Cursos
+        System to simulate a course platform.
     </mat-card-subtitle>
 </mat-card>
