--- a/frontend/course-manager/src/app/course/components/course-registration/course-registration.component.html
+++ b/frontend/course-manager/src/app/course/components/course-registration/course-registration.component.html
@@ -1,1 +1,41 @@
-<p>course-registration works!</p>
+<mat-card>
+    <mat-card-title>New Register</mat-card-title>
+    <form class="form-registration">
+        <mat-form-field appearance="outline">
+            <mat-label>Name</mat-label>
+            <input matInput type="text">
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+            <mat-label>Code</mat-label>
+            <input matInput type="text">
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+            <mat-label>Duration</mat-label>
+            <input matInput type="number">
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+            <mat-label>Rating</mat-label>
+            <input matInput type="outline">
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+            <mat-label>Price</mat-label>
+            <input matInput type="number">
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+            <mat-label>Description</mat-label>
+            <input matInput type="text">
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+            <mat-label>Release Date</mat-label>
+            <input matInput type="date">
+        </mat-form-field>
+    </form>
+    <div>
+        <button id="btn-save" mat-raised-button routerLink="/registration">
+            Save
+        </button>
+        <button id="btn-cancel" mat-raised-button routerLink="/registration">
+            Cancel
+        </button>
+      </div>
+</mat-card>
