back function created

--- a/frontend/course-manager/src/app/course/components/course-registration/course-registration.component.html
+++ b/frontend/course-manager/src/app/course/components/course-registration/course-registration.component.html
@@ -34,7 +34,7 @@
         <button id="btn-save" mat-raised-button routerLink="/registration">
             Save
         </button>
-        <button id="btn-cancel" mat-raised-button routerLink="/registration">
+        <button id="btn-cancel" mat-raised-button (click)="cancel()">
             Cancel
         </button>
       </div>
