--- a/frontend/course-manager/src/app/course/components/course-info/course-info.component.html
+++ b/frontend/course-manager/src/app/course/components/course-info/course-info.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-title>Informações do Curso</mat-card-title>
+    <mat-card-title class="title">Informações do Curso</mat-card-title>
     
-    <button mat-stroked-button routerLink="/courses">Voltar</button>
+    <button id="btn-cancel" mat-raised-button routerLink="/courses">Voltar</button>
 </mat-card>
